# battlefield-game

./: README.md
battlefied_game/1_task1/: actions.cpp  actions.h  algorithms.cpp  engine.cpp  field.cpp  field.h  main.cpp  units.cpp  units.h
battlefied_game/2_task2/: CMakeLists.txt  actions.h  engine.cpp  engine.h  units.cpp
battlefied_game/3_task3/: actions.cpp  algorithms.h  engine.cpp  field.cpp  field.h  main.cpp  units.h
readme/: description.html  description.md  description.md~
